--- a/css/demo.css
+++ b/css/demo.css
@@ -168,6 +168,18 @@ p.ref {
 	opacity: 1;
 }
 
+
+
+
+
+.large-header {
+	width: 90%
+	}
+
+
+
+
+
 .related a h3 {
 	margin: 0;
 	min-height: 63px;
