--- a/css/demo.css
+++ b/css/demo.css
@@ -55,7 +55,7 @@ p.ref {
 	display: block;
 	padding: 1em 0 1.5em;
 	font-size: 36%;
-	color: #95a5a6;
+	color: #8000a5   ;
 	line-height: 1.4;
 }
 
